--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Infix to Prefix,Postfix-Converter&Evaluator</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utill.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
